--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_mobx: ^2.0.1
   dio: ^4.0.0
   shared_preferences: ^2.0.6
+  fpdart: ^0.0.10
   
  
 
@@ -43,6 +44,7 @@ dev_dependencies:
   mobx_codegen: ^2.0.2
   build_runner: ^2.1.0
   mockito: ^5.0.13
+  mocktail: ^0.1.4
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
