--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   dio: ^4.0.0
   shared_preferences: ^2.0.6
   fpdart: ^0.0.10
+  intl: ^0.17.0
+  package_info: ^2.0.2
   
  
 
@@ -72,17 +74,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+  - family: RobotoSlab
+    fonts:
+      - asset: fonts/RobotoSlab-Regular.ttf
+  - family: RobotoSlabBold
+    fonts:
+      - asset: fonts/RobotoSlab-Bold.ttf   
+  - family: RobotoSlabLight
+    fonts:
+      - asset: fonts/RobotoSlab-Light.ttf  
