--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   fpdart: ^0.0.10
   intl: ^0.17.0
   package_info: ^2.0.2
+  url_launcher: ^6.0.9
+  effective_dart: ^1.3.2
+  flutter_launcher_icons: ^0.9.1
   
  
 
