--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,36 @@
-name: CI
-
 on: 
   push:
-    - develep
-    - main
+    branches:
+      - develop
+      - main
   pull_request:
-    branches:  
-      - develep
+    branches:
+      - develop
       - main
 
 jobs:
   flutter_test:
-    name: Run Flutter analyze and test My Coins
+    name: Run Flutter analyze and test
     runs-on: ubuntu-latest
     steps:
-      - users: actions/checkout@v2
-      - users: actions/setup-java@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
         with:
           java-version: "12.x"
-      - users: subosito/flutter-action@v1    
+      - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter format --dry-run --set-exit-if-changed lib/
-      - run: flutter format --dry-run --set-exit-if-changed test/ 
-      - run: flutter test --coverage    
-      - run: flutter test --machine > test-results-mycoins.json
-      - user: dorny/test-resporter@v1.4.2
+      - run: flutter format --dry-run --set-exit-if-changed test/
+      - run: flutter test --coverage
+      - run: flutter test --machine > test-results.json
+      - uses: dorny/test-reporter@v1.4.2
         with:
-          name: test-results-mycoins
-          paph: test-result-mycoins.json
-            reporte: flutter-json
+          name: test-results
+          path: test-results.json
+          reporter: flutter-json
+      - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
+        with:
+          min_coverage: 0
