--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,24 +7,27 @@ on:
 
 jobs:
   flutter_test:
-    name: Run Flutter analyze and test My Coins
+    name: Run Flutter analyze and test
     runs-on: ubuntu-latest
     steps:
-      - users: actions/checkout@v2
-      - users: actions/setup-java@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
         with:
           java-version: "12.x"
-      - users: subosito/flutter-action@v1    
+      - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter format --dry-run --set-exit-if-changed lib/
-      - run: flutter format --dry-run --set-exit-if-changed test/ 
-      - run: flutter test --coverage    
+      - run: flutter format --dry-run --set-exit-if-changed test/
+      - run: flutter test --coverage
       - run: flutter test --machine > test-results-mycoins.json
-      - user: dorny/test-resporter@v1.4.2
+      - uses: dorny/test-reporter@v1.4.2
         with:
           name: test-results-mycoins
-          paph: test-result-mycoins.json
-            reporte: flutter-json
+          path: test-results-mycoins.json
+          reporter: flutter-json
+      - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
+        with:
+          min_coverage: 0
