ajust ci/cd apk

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,7 +35,7 @@ jobs:
   build_ios:
     name: Build Flutter (iOS) - My_Coins
     needs: [flutter_test]
-    runs-on: macOS-11
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -49,7 +49,7 @@ jobs:
       - run: flutter build ios --release --no-codesign    
 
   build_appbundle:
-    name: Build Flutter (Android) - My_Coins
+    name: Build Flutter (Android) APPBUNDLE 
     needs: [flutter_test]
     runs-on: ubuntu-latest
     steps:
@@ -68,3 +68,24 @@ jobs:
         with:
           name: appbundle
           path: build/app/outputs/bundle/release/app-release.aab
+
+  build_apk:
+      name: Build Flutter (Android) APK 
+      needs: [flutter_test]
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - uses: actions/setup-java@v1
+          with:
+            java-version: ${{env.JAVA_VERSION}}
+        - uses: subosito/flutter-action@v1
+          with:
+            channel: "stable"
+        - run: flutter pub get
+        - run: flutter clean
+        - run: flutter build apk
+        - name: Upload apk
+          uses: actions/upload-artifact@v2.1.4
+          with:
+            name: apk
+            path: build/app/outputs/flutter-apk/app-release.apk
