--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
           reporter: flutter-json
       - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
         with:
-          min_coverage: 20
+          min_coverage: 40
   
   build_ios:
     name: Build Flutter (iOS) - My_Coins
@@ -77,7 +77,7 @@ jobs:
         - uses: actions/checkout@v2
         - uses: actions/setup-java@v1
           with:
-            java-version: ${{env.JAVA_VERSION}}
+            java-version: "12.x"                                                          
         - uses: subosito/flutter-action@v1
           with:
             channel: "stable"
