--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Simples consulta a cotação de moedas
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+3
+version: 1.0.0+5
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -29,8 +29,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.1
   rate_my_app: ^1.1.0+1
   launch_review: ^3.0.1
-
-
+  http: ^0.13.4
 
 flutter_icons:
   image_path_ios: "images/logo.png"
