--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Simples consulta a cotação de moedas
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+5
+version: 1.0.0+6
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -11,7 +11,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -30,6 +29,7 @@ dependencies:
   rate_my_app: ^1.1.0+1
   launch_review: ^3.0.1
   http: ^0.13.4
+  fl_chart: ^0.40.2
 
 flutter_icons:
   image_path_ios: "images/logo.png"
