--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,9 +14,6 @@ on:
       - develop
       - main
 env:
-  JAVA_VERSION: "12.X"
-  FLUTTER_VERSION: "2.5.2"
-  FLUTTER_CHANNEL: "stable"
   PROPERTIES_PATH: "./android/key.properties"      
 
 jobs:
@@ -27,11 +24,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: ${{env.FLUTTER_CHANNEL}}
-          flutter-version: ${{env.FLUTTER_VERSION}}
-          #java-version: "12.x"   
+          java-version: "12.x"   
+          
         with:
-          channel: ${{env.FLUTTER_CHANNEL}}
+          channel: "stable"
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter format --dry-run --set-exit-if-changed lib/
@@ -75,11 +71,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: ${{env.JAVA_VERSION}}
+          java-version: "12.X"
       - uses: subosito/flutter-action@v1
         with:
-          channel: ${{env.FLUTTER_CHANNEL}}
-          flutter-version: ${{env.FLUTTER_VERSION}}
+          channel: "stable"
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build ios --release --no-codesign    
@@ -92,11 +87,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: ${{env.JAVA_VERSION}}
+          java-version: "12.X"
       - uses: subosito/flutter-action@v1
         with:
-          channel: ${{env.FLUTTER_CHANNEL}}
-          flutter-version: ${{env.FLUTTER_VERSION}}
+          channel: "stable"
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build appbundle
@@ -114,7 +108,7 @@ jobs:
         - uses: actions/checkout@v2
         - uses: actions/setup-java@v1
           with:
-            java-version: ${{env.JAVA_VERSION}}                                                         
+            java-version: "12.X"                                                        
         - uses: subosito/flutter-action@v1
           with:
             channel: "stable"
@@ -135,8 +129,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
-          channel: ${{env.FLUTTER_CHANNEL}}
-          flutter-version: ${{env.FLUTTER_VERSION}}
+          channel: "stable"
       - run: flutter pub get
       - run: flutter test
       - run: flutter build web
