--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,20 +1,9 @@
 name: CI/CD
 
-#on:
-#  push:
-#    tags:
-#      - v*
-on: 
+on:
   push:
-    branches:
-      - develop
-      - main
-  pull_request:
-    branches:
-      - develop
-      - main
-env:
-  PROPERTIES_PATH: "./android/key.properties"      
+    tags:
+      - v*
 
 jobs:
   flutter_test:
@@ -24,8 +13,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: "12.x"   
-          
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
       - run: flutter pub get
@@ -35,7 +24,6 @@ jobs:
       - run: flutter test --coverage
       - run: flutter test --machine > test-results-mycoins.json
       - uses: dorny/test-reporter@v1.4.2
-      
         with:
           name: test-results-mycoins
           path: test-results-mycoins.json
@@ -43,35 +31,16 @@ jobs:
       - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
         with:
           min_coverage: 40
-      # Creating the key.properties file
-      - run: |
-          echo keyPassword=\${{ secrets.KEY_STORE }} > ${{env.PROPERTIES_PATH}}
-          echo storePassword=\${{ secrets.KEY_PASSWORD }} >> ${{env.PROPERTIES_PATH}}
-          echo keyAlias=\${{ secrets.KEY_ALIAS }} >> ${{env.PROPERTIES_PATH}}    
-      - uses: subosito/flutter-action@v1
-
-      # Decoding base64 key into a file
-      - run: echo "${{ secrets.KEYSTORE2 }}" | base64 --decode > android/app/key.jks
-        # Get dependencies and make assigned appbundle
-      - run: | 
-          flutter pub get
-          flutter build appbundle    
-      # Make appbundle downloadable
-      - name: Upload artefato
-        uses: actions/upload-artifact@v2
-        with:
-          name: appbundle
-          path: build/app/outputs/bundle/release                  
-      
+  
   build_ios:
-    name: Build Flutter (iOS) - My_Coins
+    name: Build Flutter (iOS) - IPA
     needs: [flutter_test]
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: "12.X"
+          java-version: "12.x"
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
@@ -87,7 +56,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: "12.X"
+          java-version: "12.x"
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
@@ -108,7 +77,7 @@ jobs:
         - uses: actions/checkout@v2
         - uses: actions/setup-java@v1
           with:
-            java-version: "12.X"                                                        
+            java-version: "12.x"                                                          
         - uses: subosito/flutter-action@v1
           with:
             channel: "stable"
@@ -120,17 +89,3 @@ jobs:
           with:
             name: apk
             path: build/app/outputs/flutter-apk/app-release.apk
-  
-  build_web:
-    name: Build Flutter WEB
-    needs: [flutter_test]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
-        with:
-          channel: "stable"
-      - run: flutter pub get
-      - run: flutter test
-      - run: flutter build web
-       
