--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - v*
+env:
+  PROPERTIES_PATH: "./android/key.properties"  
 
 jobs:
   flutter_test:
@@ -31,6 +33,25 @@ jobs:
       - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
         with:
           min_coverage: 40
+      # Creating the key.properties file
+      - run: |
+          echo keyPassword=\${{ secrets.KEY_STORE }} > ${{env.PROPERTIES_PATH}}
+          echo storePassword=\${{ secrets.KEY_PASSWORD }} >> ${{env.PROPERTIES_PATH}}
+          echo keyAlias=\${{ secrets.KEY_ALIAS }} >> ${{env.PROPERTIES_PATH}}    
+      - uses: subosito/flutter-action@v1
+
+      # Decoding base64 key into a file
+      - run: echo "${{ secrets.KEYSTORE2 }}" | base64 --decode > android/app/key.jks
+        # Get dependencies and make assigned appbundle
+      - run: |
+          flutter pub get
+          flutter build appbundle    
+      # Make appbundle downloadable
+      - name: Upload artefato
+        uses: actions/upload-artifact@v2
+        with:
+          name: appbundle
+          path: build/app/outputs/bundle/release            
   
   build_ios:
     name: Build Flutter (iOS) - IPA
