--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,7 +56,7 @@ jobs:
   build_ios:
     name: Build Flutter (iOS) - IPA
     needs: [flutter_test]
-    runs-on: macos-latest
+    runs-on: macOS-10.15
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
