--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,3 +74,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+//firebase goolgle
+apply plugin: 'com.google.gms.google-services'
