--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   launch_review: ^3.0.1
   http: ^0.13.4
   fl_chart: ^0.40.2
+  firebase_analytics: ^8.3.4
+  firebase_core: ^1.8.0
+  chart_sparkline: ^1.0.5
+
 
 flutter_icons:
   image_path_ios: "images/logo.png"
