--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,9 +54,9 @@ jobs:
           path: build/app/outputs/bundle/release            
   
   build_ios:
-    name: Build Flutter (iOS) - IPA
+    name: Build Flutter iOS
     needs: [flutter_test]
-    runs-on: macOS-10.15
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
