--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Simples consulta a cotação de moedas
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+6
+version: 1.0.0+7
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -33,6 +33,9 @@ dependencies:
   firebase_analytics: ^8.3.4
   firebase_core: ^1.8.0
   chart_sparkline: ^1.0.5
+  screenshot: ^1.2.3
+  share_plus: ^3.0.4
+  path_provider: ^2.0.6
 
 
 flutter_icons:
