--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,31 +1,41 @@
 name: CI/CD
 
-on:
+on: 
   push:
-    tags:
-      - v*
+    branches:
+      - develop
+      - main
+  pull_request:
+    branches:
+      - develop
+      - main
+#on:
+#  push:
+#    tags:
+#      - v*
 
 env:
   JAVA_VERSION: "12.x"
  # FLUTTER_VERSION: "2.2.3"
   FLUTTER_CHANNEL: "stable"
   PROPERTIES_PATH: "./android/key.properties"  
+  GOOGLE_SERVECE: "./android/app/google-services.json"
+
 
 jobs:
   flutter_test:
-    name: Run Flutter analyze and test - My_Coins
+    name: Run Flutter analyze and Test - My_Coins
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
           java-version: ${{env.JAVA_VERSION}}
-          #java-version: "12.x"
       - uses: subosito/flutter-action@v1
         with:
           channel: ${{env.FLUTTER_CHANNEL}}
           #flutter-version: ${{env.FLUTTER_VERSION}}
-          #channel: "stable"
+      - run: flutter clean    
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter format --dry-run --set-exit-if-changed lib/
@@ -39,27 +49,11 @@ jobs:
           reporter: flutter-json
       - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
         with:
-          min_coverage: 0
-      # Creating the key.properties file
-      - run: |
-          echo keyPassword=\${{ secrets.KEY_STORE }} > ${{env.PROPERTIES_PATH}}
-          echo storePassword=\${{ secrets.KEY_PASSWORD }} >> ${{env.PROPERTIES_PATH}}
-          echo keyAlias=\${{ secrets.KEY_ALIAS }} >> ${{env.PROPERTIES_PATH}}    
-      - uses: subosito/flutter-action@v1
-
-      # Decoding base64 key into a file
-      - run: echo "${{ secrets.KEYSTORE2 }}" | base64 --decode > android/app/key.jks
-        # Get dependencies and make assigned appbundle
-      - run: |
-          flutter pub get
-          flutter build appbundle    
-      # Make appbundle downloadable
-      - name: Upload artefato
-        uses: actions/upload-artifact@v2
+          min_coverage: 5
+      - uses: codecov/codecov-action@v2
         with:
-          name: appbundle
-          path: build/app/outputs/bundle/release            
-  
+          file: coverage/lcov.info    
+      
   build_ios:
     name: Build Flutter iOS
     needs: [flutter_test]
@@ -73,53 +67,117 @@ jobs:
         with:
           channel: "stable"
       - run: flutter pub get
-      - run: flutter clean
       - run: flutter build ios --release --no-codesign    
 
-  build_appbundle:
-    name: Build Flutter (Android) APPBUNDLE 
+  build_apk_bundle:
+    name: Build (Android) APK/APPBUNDLE 
     needs: [flutter_test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: ${{env.JAVA_VERSION}}
-          #java-version: "12.x"
+          java-version: ${{env.JAVA_VERSION}}                                                         
       - uses: subosito/flutter-action@v1
         with:
           channel: ${{env.FLUTTER_CHANNEL}}
           #flutter-version: ${{env.FLUTTER_VERSION}}
-          #channel: "stable"
-      - run: flutter pub get
-      - run: flutter clean
-      - run: flutter build appbundle
+      - run: |
+          flutter clean
+          flutter pub get
+          flutter build appbundle --debug
+          flutter build apk --debug
       - name: Upload appbundle
         uses: actions/upload-artifact@v2.1.4
         with:
-          name: appbundle
-          path: build/app/outputs/bundle/release/app-release.aab
+          name: appbundle_debug
+          path: build/app/outputs/bundle/debug/app-debug.aab    
+      - name: Upload apk
+        uses: actions/upload-artifact@v2.1.4
+        with:
+          name: apk_debug
+          path: build/app/outputs/flutter-apk/app-release.apk
 
-  build_apk:
-      name: Build Flutter (Android) APK 
-      needs: [flutter_test]
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2
-        - uses: actions/setup-java@v1
-          with:
-            java-version: ${{env.JAVA_VERSION}}                                                         
-        - uses: subosito/flutter-action@v1
-          with:
-            channel: ${{env.FLUTTER_CHANNEL}}
-            #flutter-version: ${{env.FLUTTER_VERSION}}
-            #channel: "stable"
-        - run: flutter pub get
-        - run: flutter clean
-        - run: flutter build apk
-        - name: Upload apk
-          uses: actions/upload-artifact@v2.1.4
-          with:
-            name: apk
-            path: build/app/outputs/flutter-apk/app-release.apk
+ publish_playStore:
+    name: (Release) Publish PlayStore
+    needs: [build_apk_bundle]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # Mandatory to use the extract version from tag action
+      - name: Extract version from tag
+        uses: damienaicheh/extract-version-from-tag-action@v1.0.0
+      - uses: actions/setup-java@v1
+        with:
+          java-version: ${{env.JAVA_VERSION}}
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: ${{env.FLUTTER_CHANNEL}}
+          #flutter-version: ${{env.FLUTTER_VERSION}}
+
+      # Creating the key.properties file
+      - run: |
+          echo keyPassword=\${{ secrets.KEY_STORE }} > ${{env.PROPERTIES_PATH}}
+          echo storePassword=\${{ secrets.KEY_PASSWORD }} >> ${{env.PROPERTIES_PATH}}
+          echo keyAlias=\${{ secrets.KEY_ALIAS }} >> ${{env.PROPERTIES_PATH}}
+
+      # Decoding base64 key into a file
+      - run: echo "${{ secrets.KEYSTORE2 }}" | base64 --decode > android/app/key.jks
+      - run: echo "${{ secrets.GOOGLE_SERVECE }}" | base64 --decode > android/app/google-services.json
+      # Get dependencies and make assigned appbundle
+      - run: |
+          export PATH="$PATH":"$HOME/.pub-cache/bin"
+          pub global activate cider
+          cider release
+          cider version ${{ env.MAJOR }}.${{ env.MINOR }}.${{ env.PATCH }}+${{ env.NUMBER_OF_COMMITS }}
+          flutter pub get
+          flutter build appbundle
+
+      #- name: Commit changes
+      #  uses: EndBug/add-and-commit@v7
+      #  with:
+      #    author_name: GitHub Actions
+      #    author_email: actions@github.com
+      #    branch: master
+      #    message: "Update version on pubspec.yaml & update change log"
+      #    push: origin master --force
+
+      # Make appbundle downloadable
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: appbundle_release
+          path: build/app/outputs/bundle/release
+
+      # Creating googleServices.json
+      - name: Create service_account.json FROM secrets.SERVICE_ACCOUNT_JSON
+        run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > service_account.json
+
+      # Upload file to Play Store
+      - name: Upload play store
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJson: service_account.json
+          packageName: br.com.rangeldev.my_coins
+          releaseFiles: build/app/outputs/bundle/release/*.aab
+          track: internal
+          status: completed
+          inAppUpdatePriority: 2
+          releaseName: ${{ env.NUMBER_OF_COMMITS }} (${{ env.MAJOR }}.${{ env.MINOR }}.${{ env.PATCH }})
+          whatsNewDirectory: distribution/whatsnew
+           mappingFile: build/app/outputs/mapping/release/mapping.txt
+
+#  notify_telegram:
+#    name: Notify Publish Success
+#    needs: [publish_playStore]
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: appleboy/telegram-action@master
+#        with:
+#          to: ${{ secrets.TELEGRAM_TO }}
+#          token: ${{ secrets.TELEGRAM_TOKEN }}
+#          message: |
+#            You've published sucessfully CNPJ_COMPANY to PLAY STORE :)
+         
       
