--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,7 +19,7 @@ env:
  # FLUTTER_VERSION: "2.2.3"
   FLUTTER_CHANNEL: "stable"
   PROPERTIES_PATH: "./android/key.properties"  
-
+  GOOGLE_SERVECE: ${{ secrets.GOOGLE_SERVECE }}
 
 jobs:
   flutter_test:
@@ -123,13 +123,12 @@ jobs:
 
       # Decoding base64 key into a file
       - run: echo "${{ secrets.KEYSTORE2 }}" | base64 --decode > android/app/key.jks 
-      - run: mkdir $HOME/private
-      - run: gpg --quiet --batch --yes --decrypt --passphrase="$GOOGLE_SERVECE" \
-      - run: --output $HOME/private/services.tar services.tar.gpg
-      - run: tar xvf $HOME/private/services.tar         
-      
-      env:
-        GOOGLE_SERVECE: ${{ secrets.GOOGLE_SERVECE }}
+      - run: |
+          mkdir $HOME/private
+          gpg --quiet --batch --yes --decrypt --passphrase="$GOOGLE_SERVECE" \
+          --output $HOME/private/services.tar services.tar.gpg
+          tar xvf $HOME/private/services.tar
+         
       # Get dependencies and make assigned appbundle
       - run: |
           export PATH="$PATH":"$HOME/.pub-cache/bin"
