--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Simples consulta a cotação de moedas
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+8
+version: 1.0.0+7
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -15,7 +15,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_modular: ^3.3.1
+  flutter_modular: ^4.2.0 #3.3.1
   mobx: ^2.0.3
   flutter_mobx: ^2.0.1
   dio: ^4.0.0
@@ -37,7 +37,6 @@ dependencies:
   share_plus: ^3.0.4
   path_provider: ^2.0.6
 
-
 flutter_icons:
   image_path_ios: "images/logo.png"
   image_path_android: "images/logo.png"
@@ -45,7 +44,7 @@ flutter_icons:
   ios: true
 
 dev_dependencies:
-  flutter_modular_test: ^1.0.1
+
   flutter_test:
     sdk: flutter
   mobx_codegen: ^2.0.2
