--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -156,7 +156,7 @@ jobs:
           serviceAccountJson: service_account.json
           packageName: br.com.rangeldev.my_coins
           releaseFiles: build/app/outputs/bundle/release/*.aab
-          track: internal
+          track: production
           status: completed
           inAppUpdatePriority: 2
           releaseName: 1.0.0+8
