--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 /android/app/services.tar
-#/android/app/google-services.json
+/android/app/google-services.json
 
 #keys
 /docs/key
