--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,7 +10,7 @@ env:
  # FLUTTER_VERSION: "2.2.3"
   FLUTTER_CHANNEL: "stable"
   PROPERTIES_PATH: "./android/key.properties"  
-  GOOGLE_SERVECE: "secrets.GOOGLE_SERVECE"
+  GOOGLE_SERVECE: ${{secrets.GOOGLE_SERVECE}}
      
 jobs:
   flutter_test:
