--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,7 +10,6 @@ env:
  # FLUTTER_VERSION: "2.2.3"
   FLUTTER_CHANNEL: "stable"
   PROPERTIES_PATH: "./android/key.properties"  
-  GOOGLE_SERVECE: ${{secrets.GOOGLE_SERVECE}}
      
 jobs:
   flutter_test:
@@ -137,7 +136,7 @@ jobs:
       # Creating googleServices.json
       - name: Create service-services.json FROM secrets.GOOGLE_SERVECE
       # run: echo '${{ secrets.GOOGLE_SERVECE }}' > service-services.json  
-        execute: echo $GOOGLE_SERVECE >  android/app/google-services.json
+        execute: echo ${{secrets.GOOGLE_SERVECE}} >  android/app/google-services.json
 
       # Upload file to Play Store
       - name: Upload play store
