--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -141,7 +141,7 @@ jobs:
       - name: Decode google-services.json
         env:
           GOOGLE_SERVECE: ${{ secrets.GOOGLE_SERVECE }}
-        run: echo $GOOGLE_SERVECE > google-services.json
+        run: echo $GOOGLE_SERVECE > mt_coins/android/app/google-services.json
       # Creating service_account.json
       - name: Create service_account.json FROM secrets.SERVICE_ACCOUNT_JSON
         run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > service_account.json
